--- a/zammad/zammad_conn.ipynb
+++ b/zammad/zammad_conn.ipynb
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1133,7 @@
     }
    ],
    "source": [
-    "from evaluation import ITTicketEvaluator\n",
+    "from Model.evaluation import ITTicketEvaluator\n",
     "import os\n",
     "model_id = os.getenv('HF_MODEL_ID')\n",
     "api_token = os.getenv('HF_TOKEN')\n",
